# Auditora

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/auditora/: __init__.py
src/auditora/adats/: __init__.py  monitor.py  report.py  session.py
src/auditora/aspects/benchmarks/: baseline.py  memory.py
src/auditora/aspects/connectors/: dashboard.py
src/auditora/aspects/events/: __init__.py  pool.py  record.py
src/auditora/core/: bifrost.py  paragon.py  proxies.py
src/auditora/decorators/: sentinel.py
