[project]
name = "auditora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mohamed Sofiene KADRI", email = "ms.kadri.dev@gmail.com" }
]

license = { file = "LICENSE" }
requires-python = ">=3.12"  # Or broaden to ">=3.8" if compatible
keywords = ["auditing", "framework", "ai", "monitoring"]  # Add relevant
classifiers = [  # Add for categorization
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",  # Assume MIT; change if different
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.urls]  # Add
Repository = "https://github.com/KadriSof/Auditora"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
